# plotters_typst_vibe

./: Cargo.toml  simple_plot.typ
examples/: simple_plot.rs
src/: lib.rs
